--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ set -a terminal-features "xterm-256color:RGB"
 
 set -g prefix C-a
 
+set -g mouse "on"
+
 set -g status-position "top"
 set -g status-interval 1
 set -g status-justify "centre"
