--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
-	url = gh-personal:mrcl-ynz/config.nvim
+	url = https://github.com/mrcl-ynz/config.nvim
