--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,8 @@ set -g status-justify "centre"
 set -g base-index 1
 set -g renumber-windows "on"
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/"
+
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "tmux-plugins/tmux-pain-control"
